# newrepo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/newrepo/: __init__.py  cli.py  exceptions.py  github_repo.py  local_repo.py  preflight.py  shell.py
tests/: test_cli.py  test_cli_doctor.py  test_cli_version.py  test_github_repo.py  test_local_repo.py
