[project]
name = "newrepo"
version = "0.2.0"
description = "GitHubリポジトリ作成時の定型作業（ディレクトリ作成〜README〜git init〜Initial Commit〜GitHubリポジトリ作成〜push）を自動化するCLIツール"
readme = "README.md"
authors = [
    { name = "kanare-dev", email = "me@kanare.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
newrepo = "newrepo.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer の Option/Argument はデフォルト引数として呼び出すのが定型パターンのため無視する。
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
